[workspace]
members = ["cli", "provider", "sdk", "signer", "faucet"]
resolver = "2"

[workspace.package]
authors = ["ADM Contributors"]
description = "The Amazing Data Machine (ADM)."
edition = "2021"
homepage = "https://github.com/amazingdatamachine/adm/"
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/amazingdatamachine/adm/"
keywords = ["TODO"]
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.82"
async-stream = "0.3.5"
async-tempfile = "0.5.0"
async-trait = "0.1.80"
base64 = "0.22.0"
bytes = "1.6.0"
cid = { version = "0.10.1", default-features = false, features = [
    "serde-codec",
    "std",
] }
clap = { version = "4.1.14", features = [
    "color",
    "derive",
    "env",
    "string",
    "unicode",
] }
clap-stdin = { version = "0.4.0", features = ["tokio"] }
console = "0.15.8"
ethers = "2.0.14"
ethers-contract = "2.0.14"
fnv = "1.0"
futures = "0.3.17"
futures-core = "0.3.30"
futures-util = "0.3.17"
humantime = "2.1.0"
hex = "0.4.3"
indicatif = "0.17.8"
lazy_static = "1.4.0"
log = "0.4.22"
num-traits = "0.2.18"
prost = "0.11.9"
reqwest = { version = "0.11.27", features = ["json", "stream", "multipart"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
stderrlog = "0.6.0"
tokio = { version = "1.37.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = "0.7.1"
tokio-stream = "0.1.0"
tracing = "0.1.40"
unixfs-v1 = { git = "https://github.com/ipfs-rust/unixfsv1", branch = "master" }
rand = "0.8.4"
warp = "0.3.7"

# Using the same tendermint-rs dependency as tower-abci. From both we are interested in v037 modules.
tendermint = { version = "0.31.1", features = ["secp256k1"] }
tendermint-proto = "0.31.1"
tendermint-rpc = { version = "0.31.1", features = [
    "secp256k1",
    "http-client",
    "websocket-client",
] }

fvm_shared = "4.1.0"
fvm_ipld_encoding = "0.4.0"

fendermint_actor_accumulator = { git = "ssh://git@github.com/amazingdatamachine/ipc.git" }
fendermint_actor_machine = { git = "ssh://git@github.com/amazingdatamachine/ipc.git" }
fendermint_actor_objectstore = { git = "ssh://git@github.com/amazingdatamachine/ipc.git" }
fendermint_crypto = { git = "ssh://git@github.com/amazingdatamachine/ipc.git" }
fendermint_vm_actor_interface = { git = "ssh://git@github.com/amazingdatamachine/ipc.git" }
fendermint_vm_message = { git = "ssh://git@github.com/amazingdatamachine/ipc.git" }

ipc_actors_abis = { git = "ssh://git@github.com/amazingdatamachine/ipc.git" }
ipc-api = { git = "ssh://git@github.com/amazingdatamachine/ipc.git" }

# Uncomment entries below when working locally on ipc and this repo simultaneously.
# Assumes the ipc checkout is in a sibling directory with the same name.
[patch."ssh://git@github.com/amazingdatamachine/ipc.git"]
fendermint_actor_accumulator = { path = "../ipc/fendermint/actors/accumulator" }
fendermint_actor_machine = { path = "../ipc/fendermint/actors/machine" }
fendermint_actor_objectstore = { path = "../ipc/fendermint/actors/objectstore" }
fendermint_crypto = { path = "../ipc/fendermint/crypto" }
fendermint_vm_actor_interface = { path = "../ipc/fendermint/vm/actor_interface" }
fendermint_vm_message = { path = "../ipc/fendermint/vm/message" }

ipc_actors_abis = { path = "../ipc/contracts/binding" }
ipc-api = { path = "../ipc/ipc/api" }
