[package]
name = "adm_cli"
description = "A CLI for interacting with the Amazing Data Machine (ADM)."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true

[[bin]]
name = "adm"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
cid = { workspace = true }
clap = { workspace = true }
clap-stdin = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stderrlog = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
ethers = { workspace = true }
k256 = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
async-tempfile = { workspace = true }
rand = { workspace = true }

tendermint-rpc = { workspace = true }

fvm_shared = { workspace = true }
fvm_ipld_encoding = { workspace = true }

fendermint_actor_accumulator = { workspace = true }
fendermint_actor_machine = { workspace = true }
fendermint_actor_objectstore = { workspace = true }
fendermint_crypto = { workspace = true }
fendermint_vm_core = { workspace = true }
fendermint_vm_message = { workspace = true }

adm_provider = { path = "../provider" }
adm_sdk = { path = "../sdk" }
adm_signer = { path = "../signer" }
