[package]
authors = { workspace = true }
edition = { workspace = true }
description = "An SDK for interacting with the Amazing Data Machine (ADM)"
name = "adm_sdk"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
cid = { workspace = true }
serde = { workspace = true }

tendermint = { workspace = true }

fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }

fendermint_actor_accumulator = { workspace = true }
fendermint_actor_machine = { workspace = true }
fendermint_actor_objectstore = { workspace = true }
fendermint_vm_actor_interface = { workspace = true }
fendermint_vm_core = { workspace = true }
fendermint_vm_message = { workspace = true }

adm_provider = { path = "../provider" }
adm_signer = { path = "../signer" }
