[package]
name = "adm_sdk"
description = "An SDK for interacting with the Amazing Data Machine (ADM)."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-tempfile = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
cid = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
ethers = { workspace = true }
ethers-contract = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
tendermint = { workspace = true }
tendermint-rpc = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
unixfs-v1 = { workspace = true }

fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }

fendermint_actor_accumulator = { workspace = true }
fendermint_actor_machine = { workspace = true }
fendermint_actor_objectstore = { workspace = true }
fendermint_vm_actor_interface = { workspace = true }
fendermint_vm_core = { workspace = true }
fendermint_vm_message = { workspace = true }

ipc_actors_abis = { workspace = true }
ipc-api = { workspace = true }
ipc-provider = { workspace = true }

adm_provider = { path = "../provider" }
adm_signer = { path = "../signer" }
